--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: jekyll-theme-chirpy
 lang: zh
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone: GMT+8
+timezone: +0800
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -38,7 +38,7 @@ social:
   email: tangbin0513@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
+    # - https://twitter.com/username # change to your Twitter homepage
     - https://github.com/856tangbin # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
